added draw_axes, graduated axes w/ SDL_ttf.

--- a/106bombyx.cbp
+++ b/106bombyx.cbp
@@ -19,6 +19,7 @@
 					<Add option="-lmingw32" />
 					<Add option="-lSDLmain" />
 					<Add option="-lSDL" />
+					<Add option="-lSDL_ttf" />
 					<Add directory="C:/SDL/lib" />
 				</Linker>
 			</Target>
